--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Sweta sati| Researcher in Deep Learning & IoT</title>
+    <title>Swet Sati | Researcher in Deep Learning & IoT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -77,11 +77,11 @@
 </head>
 <body>
     <nav class="navbar">
-        <h3>Dr. Sweta sati </h3>
+        <h3>Swet Sati</h3>
     </nav>
     
     <section class="hero">
-        <h1>Dr. Sweta sati </h1>
+        <h1>Swet Sati</h1>
         <h2>Researcher in Deep Learning & IoT</h2>
         <a href="#" class="btn">View Research</a>
     </section>
