--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="hero">
         <h1>Swet Sati</h1>
         <h2>Researcher in Deep Learning & IoT</h2>
-        <a href="#" class="btn">View Research</a>
+        <a href="product.html" class="btn">View Research</a>
     </section>
     
     <div class="container">
