--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swet Sati | Researcher in Deep Learning & IoT</title>
+    <title>Sweta Sati | Researcher in Deep Learning & IoT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -88,11 +88,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar">
-        <h3>Swet Sati</h3>
+        <h3>Sweta Sati</h3>
     </nav>
     
     <section class="hero">
-        <h1>Swet Sati</h1>
+        <h1>Sweta Sati</h1>
         <h2>Researcher in Deep Learning & IoT</h2>
         <a href="product.html" class="btn">View Research</a>
     </section>
