--- a/product.html
+++ b/product.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TTHGDNVW');</script>
-<!-- End Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TTHGDNVW');
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Products</title>
     <style>
+        /* Overall body background color */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f1f8e9; /* Light green background */
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Grid container for products */
         .product-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -19,38 +40,77 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             padding: 20px;
         }
 
+        /* Individual product styling */
         .product {
-            border: 1px solid #ddd;
+            border: 1px solid #81c784; /* Green border */
             padding: 15px;
+            background-color: #ffffff;
             text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
         }
 
+        .product:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Product image styling */
         .product img {
             max-width: 100%;
             height: auto;
             margin-bottom: 10px;
+            border-radius: 8px;
         }
 
+        /* Product name styling */
+        .product h3 {
+            font-size: 1.6em;
+            color: #388e3c; /* Dark green */
+            margin: 10px 0;
+        }
+
+        /* Price styling */
+        .product p {
+            font-size: 1.2em;
+            color: #388e3c; /* Dark green */
+            font-weight: bold;
+        }
+
+        /* Button styling */
         .product a.button {
             display: inline-block;
-            background-color: #4CAF50;
+            background-color: #66bb6a; /* Green button */
             color: white;
             padding: 10px 15px;
             text-decoration: none;
             border-radius: 4px;
-            transition: background-color 0.3s;
+            font-weight: bold;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
         .product a.button:hover {
-            background-color: #3e8e41;
+            background-color: #388e3c; /* Darker green */
+            transform: translateY(-2px);
+        }
+
+        /* Footer (if you have one) or any other section styling */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #388e3c; /* Dark green footer */
+            color: white;
         }
     </style>
 </head>
+
 <body>
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTHGDNVW"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTHGDNVW" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div class="product-grid">
         <div class="product">
@@ -78,14 +138,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img src="https://picsum.photos/250/150?random=4" alt="Product 4">
             <h3>Product 4</h3>
             <p>$12.75</p>
-            <a href="cart.html?product=4" class="button">p4-Add to Cart</a>
+            <a href="cart.html?product=4" class="button">P4-Add to Cart</a>
         </div>
 
         <div class="product">
             <img src="https://picsum.photos/250/150?random=5" alt="Product 5">
             <h3>Product 5</h3>
             <p>$29.99</p>
-            <a href="cart.html?product=5" class="button">p5-Add to Cart</a>
+            <a href="cart.html?product=5" class="button">P5-Add to Cart</a>
         </div>
 
         <div class="product">
@@ -96,5 +156,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 
+    <footer>
+        <p>Shop with Us for Great Products!</p>
+    </footer>
 </body>
+
 </html>
